fix links overlapping twich link

--- a/src/app/components/Pages/Profile/IdCard/idcard.scss
+++ b/src/app/components/Pages/Profile/IdCard/idcard.scss
@@ -34,7 +34,6 @@
 
         @include medium{
             flex-direction: row;
-            justify-content: space-between;
 
             .col{
                 margin: $l;
